# financial-market

./: http_cache.sqlite  magic_formula.py  pyproject.toml  value_club.py
config/: constants.py  path_config.py
core/: data_repository.py  database_repository.py  magic_formula.py  ranking_repository.py  stonk_market_data.py  ticket.py
core/model/: company.py  ticket.py
data/: statusinvest.csv  statusinvest_financas.csv
data/fundamentus/: magic_formula_repository.py
filters/: chain_of_responsability.py  dto.py  handlers.py  out.py
fundamentus/: magic_formula.py
main/: main.py
repositories/: fundamentus_repository.py  status_invest_repository.py
scripts/pocs/: fundamentus_magic_formula.py  fundamentus_value_club.py  http_cache.sqlite  statusinvest.csv  statusinvest_financas.csv  statusinvest_magic_formula.py
services/: chain_of_responsability.py  data_service.py  dto.py  fundamentus_service.py  handlers.py  out.py  ranking_repository.py  service_factory.py  status_invest_service.py
