[tool.poetry]
name = "py-investments"
version = "0.1.0"
description = ""
authors = ["João Pedro Limão <johnazedo07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fundamentus = "^0.2.0"
numpy = "^1.26.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
