[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["João Pedro Limão <johnazedo07@gmail.com>"]
readme = "README.md"
packages = [
    {include = "config"},
    {include = "core"},
    {include = "services"}
]

[tool.poetry.dependencies]
python = "^3.10"
fundamentus = "^0.2.0"
numpy = "^1.26.2"
pandas = "^2.1.3"

[tool.poetry.scripts]
magic_formula = "main.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
